Update release notes

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,15 @@
+Version 5.1.3
+Update OPSIN to 2.8.0
+Update xom to 1.3.9
+Update log4j2 2.25.1
+Update icu4j to 77.1
+Update poi to 5.4.1
+Update opennlp-tools to 2.5.4
+Update commons-io to 2.20.0
+Update guava to 33.4.8-jre
+Update mockito 4.11.0
+Various maven-plugin updates
+
 Version 5.1.2
 Released 30/12/2021
 Ensure we are using the log4j implementation that we think we are
